# money-tracker

./: .gitignore  Cargo.toml  README.md
migrations/2021-09-27-102445_initial/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs  tests.rs
