[package]
name = "money-tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.5.0-rc.1", features = ["json"] }
diesel = { version = "^1.4.8", features = ["postgres", "uuidv07"] }
dotenv = "^0.15.0"
serde = "^1.0.130"
uuid = { version = "^0.8.2", features = ["serde", "v4"] }
